# scorecard

./: .tmp.txt.swp  README.md  items_in_chunks.ipynb  pyproject.toml
.ipynb_checkpoints/: items_in_chunks-checkpoint.ipynb
data/: precalc.csv  precalculus.csv  tx.csv
scorecard/: main.py
settings/: config.yml
